@@ -80,6 +80,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 515183  Error occurred while executing the command
         `valgrind --num-callers=1 ./hello_world`
 515265  Add SSE4.1 BLENDPS and PBLENDW instruction for x86 32 bit
+515612  Sanity check VG_(realpath) and VG_(readlink) return values
 
 
 To see details of a given bug, visit
